avoid horizontal scrolling in about section

--- a/webapp/code/css/main.css
+++ b/webapp/code/css/main.css
@@ -43,7 +43,7 @@ a{
   padding-right: 2px;
 }
 .mainWrap * {
-  max-width: 100vw;
+  max-width: 99vw;
 }
 #wordList {
   font-family: "Droid Sans", "DejaVu Sans", LiberationSans, Arial, Sans-serif;
